tests/integration/errors/test_interface_duplicate_method.sn
# Error test: interface declares the same method name twice

interface Bad =>
    fn process(): int
    fn process(): str

fn main(): int => return 0
